# lil-poker-rl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.train  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/lil_poker/: __init__.py  adapter.py  auth.py
adapters/simulator/: __init__.py  league_env.py  self_play_env.py  sim_env.py
agent/: evaluate.py  export_onnx.py  league.py  onnx_agent.py  play_live.py  train.py
models/: vec_normalize.pkl
poker_env/: __init__.py  action_space.py  base_env.py  observation.py
tests/: test_observation.py  test_onnx.py  test_simulator.py
