[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lil-poker-rl"
version = "0.1.0"
description = "RL Poker Agent Service for Lil Poker and generic engines"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3[extra]>=2.2.1",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "treys>=0.1.8",
    "phevaluator>=0.5.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
]

[tool.setuptools]
packages = ["poker_env", "adapters", "agent"]
